# LiblibAI-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
skills/liblibai-mcp-server/: SKILL.md
src/liblib_mcp/: client.py  config.py  models.py  server.py
